--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,7 +5,11 @@
   </header>
 
   <div class="order-summary jumbotron">
-    <h4>Thank you for your order!</h4>
+    <h4>Thank you for your order! <%= @order.email %> </h4>
+    <% @order.line_items.each do |item| %>
+    <%= render partial: 'items', locals: {product: item.product, quantity: item.quantity} %>
+    <% end %>
+    <%= humanized_money_with_symbol @order.total_cents / 100 %>
   </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
