--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -9,7 +9,7 @@
     <% @order.line_items.each do |item| %>
     <%= render partial: 'items', locals: {product: item.product, quantity: item.quantity} %>
     <% end %>
-    <%= humanized_money_with_symbol @order.total_cents / 100 %>
+   <h2> <%= humanized_money_with_symbol @order.total_cents / 100 %> </h2>
   </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
