--- a/app/views/orders/_items.html.erb
+++ b/app/views/orders/_items.html.erb
@@ -4,13 +4,13 @@
       <%= image_tag product.image.thumb, alt: product.name %>
       <h4><%= product.name %></h4>
     <% end %>
-    <h4>Quantity: <%= quantity %></h4>
+    <h4>Quantity: <%= quantity %> Price: <%= humanized_money_with_symbol (product.price * quantity) %> </h4>
   </header>
   <p class="description">
     <%= product.description %>
   </p>
 <!--  -->
   <aside class="price">
-    <%= humanized_money_with_symbol (product.price * quantity) %>
+
   </aside>
 </article>
