--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,9 @@
 <section class="cart-show">
 
+  <% if cart_subtotal_cents == 0 %>
+  <a href="/"> HOME </a>
+  <% else %>
+
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
@@ -50,3 +54,4 @@
   </div>
 
 </section>
+<% end %>
