--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,6 +1,7 @@
 <section class="cart-show">
 
   <% if cart_subtotal_cents == 0 %>
+  <h1> Your Cart is Empty! </h1>
   <a href="/"> HOME </a>
   <% else %>
 
